update cho 3 trang web telegram, plati và buysellvourcher

--- a/popup.html
+++ b/popup.html
@@ -88,12 +88,13 @@
     </style>
 </head>
 <body>
-    <h2>⚙️ Cấu hình Groq API Key</h2>
+    <h2>⚙️ Cấu hình Gemini API Key</h2>
     <p class="description">
-        Extension cần Groq API key để dịch tin nhắn.<br>
-        <a href="https://console.groq.com/" target="_blank">Lấy API key tại đây</a>
+        Extension cần Google Gemini API key để dịch tin nhắn.<br>
+        Hỗ trợ: BuySellVouchers, Digiseller/Plati, Telegram Web<br>
+        <a href="https://aistudio.google.com/apikey" target="_blank">Lấy API key tại Google AI Studio</a>
     </p>
-    <input type="password" id="apiKeyInput" placeholder="Nhập Groq API Key của bạn">
+    <input type="password" id="apiKeyInput" placeholder="Nhập Gemini API Key của bạn">
     <div class="button-container">
         <button class="cancel-btn" id="cancelBtn">Hủy</button>
         <button class="save-btn" id="saveBtn">Lưu</button>
